// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a Toast with a horizontal bar 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c14:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  fill: #35709e;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c16 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c13:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c13[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c13 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  color: #000;
  fill: #000;
}

.c17 .c9 {
  top: 0.15em;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c12 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c12:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: 0;
  height: 5px;
  right: -1px;
  width: calc(100% + 2px);
  background-color: #eaf0f5;
}

.c5 {
  position: absolute;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: 0;
  height: 5px;
  right: -1px;
  width: calc(100% + 2px);
  background-color: #35709e;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c18 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c15 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="info"
>
  <div
    class="c4 c3"
    type="info"
  />
  <div
    class="c5 c3"
    type="info"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10 c11"
        color="info"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          info
        </title>
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c12 c13 c14"
    kind="link"
    type="button"
  >
    <div
      class="c15 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c9 c16 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a Toast with a title 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c16 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c16:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.5rem !important;
  font-weight: 600 !important;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  fill: #35709e;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c18 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c15:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c15[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c15 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c15:hover {
  color: #000;
  fill: #000;
}

.c12 {
  font-weight: 700;
  line-height: 1.2;
}

.c12:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c12 + .sub-heading {
  margin-top: -1rem;
}

h1.c12 {
  font-size: 3rem;
}

h2.c12 {
  font-size: 2.5rem;
}

h3.c12 {
  font-size: 2rem;
}

h4.c12 {
  font-size: 1.5rem;
}

h5.c12 {
  font-size: 1.25rem;
}

h6.c12 {
  font-size: 1rem;
}

.c12 .c9 {
  top: 0.15em;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c14 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c14:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #eaf0f5;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #35709e;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c19 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c17 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="info"
>
  <div
    class="c4 c3"
    type="info"
  />
  <div
    class="c5 c3"
    type="info"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10 c11"
        color="info"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          info
        </title>
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      <h6
        class="heading c12 c13"
        font-weight="semibold"
        style="font-weight: semibold;"
      >
        This is a title
      </h6>
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c14 c15 c16"
    kind="link"
    type="button"
  >
    <div
      class="c17 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c9 c18 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a Toast with no close button 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  fill: #35709e;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c12 .c9 {
  top: 0.15em;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #eaf0f5;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #35709e;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c13 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="info"
>
  <div
    class="c4 c3"
    type="info"
  />
  <div
    class="c5 c3"
    type="info"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10 c11"
        color="info"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          info
        </title>
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
</div>
`;

exports[`renders correctly for a basic Toast 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  fill: #35709e;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c15 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c12[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c12 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12:hover {
  color: #000;
  fill: #000;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c11 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c11:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #eaf0f5;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #35709e;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c16 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c14 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="info"
>
  <div
    class="c4 c3"
    type="info"
  />
  <div
    class="c5 c3"
    type="info"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10"
        color="info"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          info
        </title>
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c11 c12 c13"
    kind="link"
    type="button"
  >
    <div
      class="c14 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c15 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a tinted toast of type danger 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c14:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #c9444d !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c10 {
  fill: #c9444d;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c13:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c13[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c13 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  color: #000;
  fill: #000;
}

.c17 .c9 {
  top: 0.15em;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c12 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c12:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #f9eced;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #c9444d;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 {
  background-color: #f9eced;
  color: #642226;
  fill: #642226;
}

.c18 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c15 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="danger"
>
  <div
    class="c4 c3"
    type="danger"
  />
  <div
    class="c5 c3"
    type="danger"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10 c11"
        color="danger"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          danger
        </title>
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c12 c13 c14"
    kind="link"
    type="button"
  >
    <div
      class="c15 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c9 c16 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a tinted toast of type info 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c14:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  fill: #35709e;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c16 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c13:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c13[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c13 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  color: #000;
  fill: #000;
}

.c17 .c9 {
  top: 0.15em;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c12 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c12:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #eaf0f5;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #35709e;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 {
  background-color: #eaf0f5;
  color: #1a384f;
  fill: #1a384f;
}

.c18 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c15 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="info"
>
  <div
    class="c4 c3"
    type="info"
  />
  <div
    class="c5 c3"
    type="info"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10 c11"
        color="info"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          info
        </title>
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c12 c13 c14"
    kind="link"
    type="button"
  >
    <div
      class="c15 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c9 c16 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a tinted toast of type success 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c14:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #2c8453 !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c10 {
  fill: #2c8453;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c13:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c13[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c13 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  color: #000;
  fill: #000;
}

.c17 .c9 {
  top: 0.15em;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c12 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c12:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #e9f2ed;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #2c8453;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 {
  background-color: #e9f2ed;
  color: #164229;
  fill: #164229;
}

.c18 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c15 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="success"
>
  <div
    class="c4 c3"
    type="success"
  />
  <div
    class="c5 c3"
    type="success"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10 c11"
        color="success"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          success
        </title>
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c12 c13 c14"
    kind="link"
    type="button"
  >
    <div
      class="c15 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c9 c16 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a tinted toast of type warning 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c14:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #f2a100 !important;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c10 {
  fill: #f2a100;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c13:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c13[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c13 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  color: #000;
  fill: #000;
}

.c17 .c9 {
  top: 0.15em;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c12 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c12:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #fdf5e5;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #f2a100;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 {
  background-color: #fdf5e5;
  color: #483000;
  fill: #483000;
}

.c18 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c15 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="warning"
>
  <div
    class="c4 c3"
    type="warning"
  />
  <div
    class="c5 c3"
    type="warning"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10 c11"
        color="warning"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 576 512"
      >
        <title>
          warning
        </title>
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c12 c13 c14"
    kind="link"
    type="button"
  >
    <div
      class="c15 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c9 c16 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a toast of type danger 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #c9444d !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c9 {
  fill: #c9444d;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c12[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c12 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12:hover {
  color: #000;
  fill: #000;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c11 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c11:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #f9eced;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #c9444d;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c16 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c14 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="danger"
>
  <div
    class="c4 c3"
    type="danger"
  />
  <div
    class="c5 c3"
    type="danger"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10"
        color="danger"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          danger
        </title>
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c11 c12 c13"
    kind="link"
    type="button"
  >
    <div
      class="c14 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c15 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a toast of type info 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  fill: #35709e;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c15 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c12[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c12 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12:hover {
  color: #000;
  fill: #000;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c11 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c11:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #eaf0f5;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #35709e;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c16 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c14 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="info"
>
  <div
    class="c4 c3"
    type="info"
  />
  <div
    class="c5 c3"
    type="info"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10"
        color="info"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          info
        </title>
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c11 c12 c13"
    kind="link"
    type="button"
  >
    <div
      class="c14 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c15 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a toast of type success 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #2c8453 !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c9 {
  fill: #2c8453;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c12[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c12 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12:hover {
  color: #000;
  fill: #000;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c11 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c11:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #e9f2ed;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #2c8453;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c16 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c14 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="success"
>
  <div
    class="c4 c3"
    type="success"
  />
  <div
    class="c5 c3"
    type="success"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10"
        color="success"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 512 512"
      >
        <title>
          success
        </title>
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c11 c12 c13"
    kind="link"
    type="button"
  >
    <div
      class="c14 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c15 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`renders correctly for a toast of type warning 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #f2a100 !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c9 {
  fill: #f2a100;
  position: relative;
  font-size: 1.25em;
  height: 1em;
  width: 1em;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c12[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c12 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12:hover {
  color: #000;
  fill: #000;
}

.c2 {
  background-color: white;
  border-radius: 3px;
  box-shadow: 0px 6px 12px 0px rgba(0,0,0,0.1),0px 0px 0px 1px rgba(0,0,0,0.1);
}

.c11 {
  width: 24px;
  min-height: 24px;
  padding: 0;
  text-align: right;
  position: absolute;
  right: 0.5rem;
  top: 0.5rem;
}

.c11:hover {
  background-color: #f2f2f2;
}

.c8 {
  margin-right: 0.75rem;
  margin-left: -0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  padding: 1rem;
  padding-left: calc(1rem + 5px);
  padding-right: 2rem;
}

.c4 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #fdf5e5;
}

.c5 {
  position: absolute;
  border-top-left-radius: 3px;
  border-bottom-left-radius: 3px;
  bottom: -1px;
  height: calc(100% + 2px);
  margin-left: -1px;
  width: 5px;
  background-color: #f2a100;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  width: 350px;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c16 .c0 {
  -webkit-animation: gnffDY 300ms ease-in-out forwards;
  animation: gnffDY 300ms ease-in-out forwards;
}

.c14 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0 c1 c2 c3"
  elevation="300"
  style="elevation: 300;"
  type="warning"
>
  <div
    class="c4 c3"
    type="warning"
  />
  <div
    class="c5 c3"
    type="warning"
  />
  <div
    class="c6 c7 c3"
  >
    <div
      class="c8 c7 c3"
    >
      <svg
        class="c9 c10"
        color="warning"
        role="img"
        size="1.25"
        style="size: 1.25px;"
        viewBox="0 0 576 512"
      >
        <title>
          warning
        </title>
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c3"
    >
      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica.
    </div>
  </div>
  <button
    class="c11 c12 c13"
    kind="link"
    type="button"
  >
    <div
      class="c14 c3"
    >
      Close
    </div>
    <svg
      aria-hidden="true"
      class="c15 c3"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 352 512"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;
